web.js kiegészítve
